--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,9 @@ Django==5.2.6
 djangorestframework==3.15.2
 django-cors-headers==4.6.0
 Pillow==10.4.0
+gunicorn==21.2.0
+psycopg2-binary==2.9.9
+whitenoise==6.6.0
+dj-database-url==2.1.0
 
 
