--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,12 +1,9 @@
 [phases.setup]
-nixPkgs = { python = "3.11" }
+nixPkgs = ["python3", "pip"]
 
 [phases.install]
-cmds = [
-  "pip install -r requirements.txt",
-  "python manage.py collectstatic --no-input"
-]
+cmds = ["pip install -r requirements.txt"]
 
-[start]
-cmd = "python -m gunicorn master.wsgi:application --bind 0.0.0.0:$PORT"
+[phases.build]
+cmds = ["python manage.py collectstatic --no-input"]
 
